--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 	html, body {margin:0; padding:0; overflow:hidden;} </style>
 </head>
 <body>
+	<div class="virtual_button">
+		<div id="up"></div>
+		<div id="down"></div>
+		<div id="left"></div>
+		<div id="right"></div>
+	</div>
 </body>
 </html>
